docs: Remove a \small in a caption affecting subsequent html text in SC/21.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -3657,7 +3657,7 @@ See \cref{Figure}{fig:skyloop}{the diagram below}.
 
 \myfig{sc21_skyloop}{[h!]}{width=0.55\linewidth}{fig:skyloop}{
   Illustration of the \task{skyloop} approach}{
-  \small Illustration of the \task{skyloop} approach
+  Illustration of the \task{skyloop} approach
   to map-making compared with the standard map-maker.
 }
 
