docs: Restore a \newpage in the appendix of SC/21.
This got lost from 463f2f06de14c when I struggled with git add -p
to exclude a long section contiguous to it.  It's needed to prevent
the text in the following section to be interspersed with the
table split over three pages in the PDF.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -5420,7 +5420,7 @@ options, see the comments in \texttt{smurf\_makemap.def} or
 \end{htmlonly}
 
 
-
+\newpage
 \subsection{\xlabel{special}Specialised Configuration Files}
 \label{app:special}
 
